# PPR-Sparsifier

./: CMakeLists.txt  README.md
application/: experiments.cpp  experiments.ipynb
application/PPR-matrices/deezer/: deezer_induced_RN.txt  deezer_map.txt
application/PPR-matrices/github/: github_induced_RN.txt  github_map.txt
application/PPR-matrices/lastfm/: induced_RN.txt  lastfm_map.txt
include/: graph.h  graph_io.h
include/approximate_ppr_sparsifier/: approximate_pp_sparsifier.h
include/exact_ppr_sparsifier/: NodeRemoval.h  PPR_Matrix_Inv.h  SC_Adj_List.h  SC_Block_Elimination.h  SC_Hash_Table.h
include/utility/: graph_utility.h  min_degree_pq.h  orderings.h  pagerank.h  utility.h
src/: graph_io.cpp  main.cpp
src/approximate_pp-sparsifier/: approx_pp-sparsifier.cpp
src/exact_ppr-sparsifier/BlockElimination/: BlockElimination.cpp  system_solver.jl
src/exact_ppr-sparsifier/NodeRemoval/: NodeRemoval.cpp
src/exact_ppr-sparsifier/PPR_Matrix_Inv/: PPR_Matrix_Inv.cpp
src/exact_ppr-sparsifier/SC_Adj_List/: SC_AdjList.cpp  gaussian_elimination.cpp  min_degree_ordering.cpp  symbolic_factorization.cpp
src/exact_ppr-sparsifier/SC_Hash_Table/: SC_Hash_Table.cpp
src/utility/: graph_utility.cpp  min_degree_pq.cpp  orderings.cpp  pagerank.cpp  utility.cpp
